portal/static/css/gil.css
/* ... */
.button-callout.button-callout--has-text .button-callout__scroll {
    margin-top: 30px;
}
.next-down {
    text-align: center;
    padding-bottom: 30px;
}
.next-down__copy {
    font-size: 25px;
    line-height: 32px;
    letter-spacing: 0.3px;
    padding: 50px 0 30px;
    margin: 0;
}
@media (max-width: 767px) {
    .next-down__copy {
        font-size: 24px;
        line-height: 33px;
    }
}
.next-down figure {
    font-size: 30px;
    line-height: 1;
    color: #7C959E;
}
.mini-boxes {
    display: -ms-flexbox;
    display: flex;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}
.mini-boxes--full-width {
    margin: 0 auto;
    max-width: 780px;
}
.mini-boxes__item {
    width: 33.33333%;
    padding: 0 7.5px 15px 7.5px;
    display: -ms-flexbox;
    display: flex;
}
.mini-boxes__item-col {
    -ms-flex-direction: column;
    flex-direction: column;
}
.mini-boxes__item-col .mini-box {
    width: 100%;
    -ms-flex: 1;
    flex: 1;
    margin-bottom: 15px;
}
.mini-boxes__item-col .mini-box:last-of-type {
    margin-bottom: 0;
}
.mini-boxes--half-width .mini-boxes__item {
    width: 50%;
}
@media (max-width: 767px) {
    .mini-boxes--half-width .mini-boxes__item {
        width: 100%;
    }
}
.mini-boxes--full-width .mini-boxes__item {
    width: 100%;
}
@media (max-width: 767px) {
    .mini-boxes__item {
        width: 50%;
    }
}
@media (max-width: 543px) {
    .mini-boxes__item {
        width: 100%;
    }
}
.mini-box {
    background: rgba(51, 54, 56, 0.8);
    color: #FFF;
    padding: 20px;
    width: 100%;
}
.mini-boxes--theme-brown .mini-box {
    background: rgba(57, 56, 51, 0.8);
}
.mini-boxes--theme-gray .mini-box {
    background: rgba(59, 68, 73, 0.5);
}
.mini-box__head {
    font-size: 17px;
    line-height: 23px;
    color: #DCCAB2;
    letter-spacing: 1.2px;
    margin: 0 0 10px;
    text-transform: uppercase;
}
.mini-box__head--centered {
    text-align: center;
}
@media (max-width: 767px) {
    .mini-box__head {
        font-size: 14px;
        line-height: 18px;
    }
}
.mini-box__subhead {
    font-size: 19px;
    line-height: 25px;
    font-weight: bold;
    margin: 15px 0 5px;
}
.mini-boxes--theme-blue .mini-box__subhead {
    color: #BCC2A4;
}
.mini-box__copy,
.mini-box__list {
    margin: 0;
    font-size: 19px;
    line-height: 25px;
}
.mini-box__copy--smaller,
.mini-box__list--smaller {
    font-size: 17px;
    line-height: 25px;
}
@media (max-width: 767px) {
    .mini-box__copy,
    .mini-box__list {
        font-size: 15px;
        line-height: 20px;
    }
}
.mini-box__list li {
    font-size: 22px;
    line-height: 30px;
}
.mini-box__list.mini-box__list--inline {
    margin-top: 15px;
}
.mini-box__list.mini-box__list--inline li {
    font-size: 19px;
    line-height: 25px;
}
.icon-box {
    background: #333638;
    color: #fff;
    display: block;
    padding: 20px 20px 20px 135px;
    margin: 0 10px 0 0;
    position: relative;
    min-height: 130px;
    max-height: 100%;
}
.icon-box:active,
.icon-box:focus,
.icon-box:visited,
.icon-box:hover {
    outline: none;
    color: #fff;
}
.icon-box:hover {
    color: #7C959E;
}
.icon-box-wrap .icon-box {
    padding-left: 130px;
}
@media (max-width: 543px) {
    .icon-box-wrap .icon-box {
        padding: 130px 20px 20px 20px;
    }
}
.icon-box strong,
.icon-box h4,
.icon-box span {
    display: block;
}
.icon-box-group .icon-box {
    width: 100%;
    margin-right: 0;
}
.icon-box--theme-brown {
    background: rgba(57, 56, 51, 0.8);
}
.icon-box.icon-box--theme-inactive {
    background: rgba(51, 54, 56, 0.5);
}
.icon-box.icon-box--theme-brown {
    background: rgba(57, 56, 51, 0.8);
}
.icon-box.icon-box--theme-brown.icon-box--theme-inactive {
    background: rgba(57, 56, 51, 0.5);
}
.icon-box__subhead {
    font-size: 16px;
    line-height: 20px;
    font-weight: 500;
    letter-spacing: 2.9px;
    text-transform: uppercase;
    margin: 6px 0 10px;
    color: #A9B2B7;
}
.icon-box-wrap .icon-box__subhead {
    font-size: 12px;
    line-height: 18px;
}
.icon-box-wrap .icon-box__subhead em {
    font-size: 6px;
}
.icon-box--theme-two .icon-box__subhead {
    color: #D2D1C5;
}
.icon-box__subhead em {
    font-size: 10px;
}
.icon-box__head {
    text-transform: uppercase;
    font-weight: 700;
    letter-spacing: 1.14px;
}
.icon-box--theme-inactive .icon-box__head {
    color: #BFC0BD;
}
.icon-box-wrap .icon-box__head {
    font-size: 22px;
    line-height: 28px;
}
.icon-box__lowhead {
    color: #BCC2A6;
    font-size: 12px;
    line-height: 17px;
    text-transform: uppercase;
    letter-spacing: 2.35px;
}
.icon-box--theme-two .icon-box__lowhead {
    color: #A9B2B7;
}
.icon-box__icon {
    position: absolute;
    left: 20px;
    top: 20px;
}
@media (max-width: 543px) {
    .icon-box__icon {
        left: 50%;
        margin-left: -45px;
    }
}
.icon-box__button {
    font-size: 22px;
    line-height: 26px;
    letter-spacing: 5px;
    color: #FFF;
    display: inline-block;
    padding: 25px;
    text-transform: uppercase;
    text-align: center;
}
.icon-box .icon-box__button {
    width: 100%;
}
.icon-box__button--disabled {
    opacity: 0.4;
}
@media (max-width: 767px) {
    .icon-box__button {
        font-size: 0.9em;
        padding-left: 12px;
        padding-right: 12px;
        margin-left: 0.5em;
        margin-right: 0.5em;
    }
}
.icon-box__button span {
    position: relative;
    display: inline-block;
    padding-right: 45px;
}
.icon-box__button span figure {
    font-size: 31px;
    line-height: 1;
    position: absolute;
    margin-left: 5px;
    color: #4C5E6E;
    top: -5px;
    right: 0;
}
.icon-box__button:hover {
    color: #F7F7F7;
}
.icon-box__button--main {
    background: #7C959E;
    margin: 0 0 10px;
    height: 72px;
}
.page-intro .icon-box__button--main {
    min-width: 250px;
}
@media (max-width: 767px) {
    .page-intro .icon-box__button--main {
        font-size: 0.7em;
    }
}
.icon-box__button--main:hover {
    background: #576e76;
}
/* ... */

